# fourier-analysis

./: .gitignore  fourier-analysis.typ  mybook.typ
content/: 02-basic-properties-of-fourier-series.typ
fourier-analysis/: main.py  pyproject.toml
fourier-analysis-julia-scripts/: .gitignore  02-basic-properties-of-fourier-series.jl  Project.toml
fourier-analysis/notebooks/: basic-properties-of-fourier-series.ipynb
src/: main.typ  references.bib
src/chapters/: 02-basic-properties-of-fourier-series.typ  03-convergence-of-fourier-series.typ
